# lang-segment-anything

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  app.py  environment.yml  main.py  pyproject.toml  requirements.txt  running_test.py  testing.py  win_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.md  bugs.yaml  documentation.md  documentation.yaml  feature-request.md  feature-request.yaml  refactoring.yaml  unexpected-problems-bugs.md
.github/workflows/: pre-commit.yml
example_notebook/: getting_started_with_lang_sam.ipynb
lang_sam/: __init__.py  lang_sam.py  server.py  utils.py
lang_sam/data/: labeling.py  utils.py
lang_sam/models/: gdino.py  sam.py  utils.py
notebook/: getting_started.ipynb
src/: lang_sam.py  utils.py
